<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pedro.aboutme.MainActivity"
    android:orientation="vertical"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_me"
        android:layout_width="104dp"
        android:layout_height="104dp"
        android:src="@drawable/my_photo"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorPrimaryDark"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        android:textSize="45sp"
        android:textColor="@color/colorFonts"
        android:gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorFonts"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:text="@string/carrera"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/mail"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:src="@drawable/mail"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorFonts"
            android:text="@string/mail"/>

        <ImageView
            android:id="@+id/twitter"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:src="@drawable/twitter_round_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorFonts"
            android:text="@string/twitter"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/phone"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:src="@drawable/phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:layout_marginRight="48dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:textColor="@color/colorFonts"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/github"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:src="@drawable/github3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorFonts"
            android:text="@string/github_username"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="bottom|center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/label"
            android:textColor="#000"
            android:textSize="16sp"/>

        <ImageView
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/halfwaylogo" />
    </LinearLayout>


</LinearLayout>
